# etf-geo-analyzer

./: .gitignore  .pre-commit-config.yaml  Geographical-etf-distribution.ipynb  README.md  TODO.md  pyproject.toml  requirements.txt
data/: EIMI_holdings.csv  SWDA_holdings.csv
data/ishares/: ishares_download_all_etfs.py  ishares_parse_html.py  ishares_scrape_etf_list_html.py
etfdiversipy/: cli.py  cli_utils.py  etl.py  fund.py  scrape.py
etfdiversipy/providers/: __init__.py
