[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.8"

[project]
description = "A tool to compute and optimize the geographical diversification of an ETF portfolio"
name = "etfdiversipy"
version = "0.0.1"
authors = [{ name = "Gianluca Marcon", email = "marcon.gluca@gmail.com" }]
maintainers = [{ name = "Gianluca Marcon", email = "marcon.gluca@gmail.com" }]
dependencies = [ "polars", "tqdm", "ruff", "beautifulsoup4", "requests-html" ]

[tool.setuptools]
packages = ["etfdiversipy"]

[project.urls]
Homepage = "https://github.com/etf-geo-analyzer"
Repository = "https://github.com/etf-geo-analyzer"

# [tool.setuptools.package-dir]
# mypkg = "etfdiversipy"

[project.scripts]
diversipy = "etfdiversipy.cli:main"
etf-scrape = "etfdiversipy.scrape:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
